[package]
name = "bolik_proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
prost-types = "0.11"
# protobuf = "3.0"

[build-dependencies]
prost-build = "0.11"
# protobuf-codegen = "3.0"
# protoc-bin-vendored = "3.0"
