[package]
name = "bolik_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
bolik_chain = { path = "../bolik_chain" }
bolik_migrations = { path = "../common/migrations" }
bolik_proto = { path = "../bolik_proto" }
bs58 = { workspace = true }
bytes = "^1.1"
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc", "getrandom", "rand_core", "stream"] }
chrono = "^0.4"
kamadak-exif = "0.5"
image = { version = "0.24", default-features = false, features = ["gif", "jpeg", "png"] }
multihash = { version = "^0.16", default-features = false, features = ["std", "multihash-impl", "sha2", "blake3"] }
openmls = { workspace = true }
openmls_rust_crypto = { workspace = true}
openmls_traits = { workspace = true }
percent-encoding = "2"
prost = { version = "0.11", default-features = false, features = ["prost-derive"] }
pulldown-cmark = { version = "0.9", default-features = false }
rand = { version = "^0.8", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "fs"] }
tokio-stream = "^0.1"
tokio-util = { version = "^0.7", features = ["io"] }
reqwest = { version = "^0.11", default-features = false, features = ["gzip", "stream", "native-tls-vendored"] }
seahash = { workspace = true }
tracing = { workspace = true }
thiserror = "1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
lib0 = "0.14.1"
yrs = "0.14.1"

# As an option to Flutter we can use:
# keyring = "1.2"

[dev-dependencies]
pretty_assertions = "1.3"
seahash = "4.1"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std", "ansi"], default-features = false }
